hphp/test/slow/packages/requirepackage/parse_errors/parse_errors7.php.inc
<?hh

<<__SoftRequirePackage('foo', 42, 'baz')>>
function gpe() : void {}
